# Music_Directory_player-thesis

./: .gitignore  CMakeLists.txt  TODO.txt  main.cpp
assets/: personalizations.json
cpp/: DebugPrint.cpp  DebugPrint.h
cpp/Backend/: Backend.cpp  Backend.h
cpp/Directory/: Directory.cpp  Directory.h
cpp/Personalization/: Personalization.cpp  Personalization.h
cpp/Player/: Player.cpp  Player.h
cpp/PlayerQueue/: PlayerQueue.cpp  PlayerQueue.h
cpp/Playlist/: Playlist.cpp  Playlist.h
cpp/Song/: Song.cpp  Song.h
cpp/SongList/: SongList.cpp  SongList.h
qml/: Main.qml
qml/components/: ColorSelectField.qml  DirComboBox.qml  FlatButton.qml  ImageButton.qml  InfoToolTip.qml  LeftTextInList.qml  LongSeparator.qml  MainPageFooter.qml  MainPageHeader.qml  PathSelectField.qml  ScrollCurrentSongMarker.qml  SwitchField.qml
qml/components/MainPage/: Footer.qml  Header.qml
qml/delegates/: ColorSelectField.qml  IntegerField.qml  LeftTextInList.qml  ListButtonField.qml  PathSelectField.qml  StringField.qml  SwitchField.qml
qml/delegates/Settings/: ColorSelectField.qml  IntegerField.qml  PathSelectField.qml  StringField.qml  SwitchField.qml
qml/delegates/Settings/Common/: LeftText.qml
qml/pages/: MainPage.qml  Settings.qml
qml/popups/: Popup1.qml  Popup2.qml  Popup3.qml  PopupLoading.qml
